--- a/ecgsite/templates/ecgsite/ecg_list.html
+++ b/ecgsite/templates/ecgsite/ecg_list.html
@@ -1,9 +1,29 @@
-{% extends 'blog/base.html' %}
+{% load static %}
+<html>
+    <head>
+        <title>Django Girls blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="{% static 'css/ecgsite.css' %}">
+    </head>
+    <body>
+    <div class="page-header">
+        <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
 
-        <div class="vertical-menu">
-            <a href="#" class="active">Files:</a>
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-            <a href="#">Link 4</a>
+              <div class="vertical-menu">
+              <a href="#" class="active">Files:</a>
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+              <a href="#">Link 4</a>
+              </div>
+            </div>
         </div>
+    </div>
+</body>
+</html>
